implement GetSystemInfo interface for QueryService
