# api/engine-vector-space-search-service.pb.go
@@ -173,19 +173,19 @@ func (PacketDeliveryStatus) EnumDescriptor() ([]byte, []int) {
 type ServiceStatus int32
 
 const (
-	ServiceStatus_Available   ServiceStatus = 0
-	ServiceStatus_Unavailable ServiceStatus = 1
+	ServiceStatus_Unavailable ServiceStatus = 0
+	ServiceStatus_Available   ServiceStatus = 1
 )
 
 // Enum value maps for ServiceStatus.
 var (
 	ServiceStatus_name = map[int32]string{
-		0: "Available",
-		1: "Unavailable",
+		0: "Unavailable",
+		1: "Available",
 	}
 	ServiceStatus_value = map[string]int32{
-		"Available":   0,
-		"Unavailable": 1,
+		"Unavailable": 0,
+		"Available":   1,
 	}
 )
 
@@ -513,7 +513,7 @@ func (x *GetSystemInfoResponse) GetServiceStatus() ServiceStatus {
 	if x != nil {
 		return x.ServiceStatus
 	}
-	return ServiceStatus_Available
+	return ServiceStatus_Unavailable
 }
 
 var File_github_com_amazingchow_engine_vector_space_search_service_pb_engine_vector_space_search_service_proto protoreflect.FileDescriptor
@@ -585,9 +585,9 @@ var file_github_com_amazingchow_engine_vector_space_search_service_pb_engine_vec
 	0x6c, 0x69, 0x76, 0x65, 0x72, 0x79, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x0e, 0x0a, 0x0a,
 	0x49, 0x6e, 0x44, 0x65, 0x6c, 0x69, 0x76, 0x65, 0x72, 0x79, 0x10, 0x00, 0x12, 0x0e, 0x0a, 0x0a,
 	0x4f, 0x75, 0x74, 0x4f, 0x66, 0x53, 0x74, 0x6f, 0x63, 0x6b, 0x10, 0x01, 0x2a, 0x2f, 0x0a, 0x0d,
-	0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x0d, 0x0a,
-	0x09, 0x41, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x10, 0x00, 0x12, 0x0f, 0x0a, 0x0b,
-	0x55, 0x6e, 0x61, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x10, 0x01, 0x32, 0xe3, 0x02,
+	0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x0f, 0x0a,
+	0x0b, 0x55, 0x6e, 0x61, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x10, 0x00, 0x12, 0x0d,
+	0x0a, 0x09, 0x41, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x10, 0x01, 0x32, 0xe3, 0x02,
 	0x0a, 0x0c, 0x51, 0x75, 0x65, 0x72, 0x79, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x9a,
 	0x01, 0x0a, 0x05, 0x51, 0x75, 0x65, 0x72, 0x79, 0x12, 0x3c, 0x2e, 0x61, 0x6d, 0x61, 0x7a, 0x69,
 	0x6e, 0x67, 0x63, 0x68, 0x6f, 0x77, 0x2e, 0x65, 0x6e, 0x67, 0x69, 0x6e, 0x65, 0x5f, 0x76, 0x65,
